--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     <link rel="stylesheet" href="style.css">
 
     <title>kids School</title>
@@ -64,8 +66,8 @@
                     </div>
                 </div>
                 <div class="icon">
-                    <p>1</p>
-                    <p>2</p>
+                    <span><i class="fi fi-rr-angle-left"></i></span>
+                    <span><i class="fi fi-rr-angle-right"></i></span>
                 </div>
                 <div>
                     <marquee>hi test</marquee>
@@ -74,7 +76,7 @@
         </section>
         <section class="two">
             <div class="container">
-                <div>
+                <div class="title">
                     <h3>Our Stories</h3>
                 </div>
                 <div class="stories">
@@ -123,6 +125,10 @@
                         </div>
                     </div>   
                 </div>
+                <div class="st-btn">
+                    <button class="quicksand-font">View All</button>
+                </div>
+
             </div>
             
         </section>
