section 0ne complete desktop

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
-    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-bold-straight/css/uicons-bold-straight.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-bold-straight/css/uicons-bold-straight.css'>
     <link rel="stylesheet" href="style.css">
 
     <title>kids School</title>
@@ -65,13 +65,14 @@
                         <p class="rm rm3">Read More</p>
                     </div>
                 </div>
-                <div class="icon">
-                    <span><i class="fi fi-rr-angle-left"></i></span>
-                    <span><i class="fi fi-rr-angle-right"></i></span>
+                <div class="icn">
+                    <span class="icn-btn"><i class="fi fi-bs-angle-left"></i></i></span>
+                    <span class="icn-btn"><i class="fi fi-bs-angle-right"></i></span>
                 </div>
-                <div>
-                    <marquee>hi test</marquee>
-                </div>
+                
+            </div>
+            <div>
+                <marquee>hi test</marquee>
             </div>
         </section>
         <section class="two">
