--- a/index.html
+++ b/index.html
@@ -135,29 +135,35 @@
         </section>
     </main>
     <footer>
-        <div>
-            <img src="./assets/logo.png" alt="">
-            <h3>kids <br>Education</h3>
-            <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
-        </div>
-        <div>
-            <h3>School</h3>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Facilities</a></li>
-                <li><a href="">Admission</a></li>>
-            </ul>
-        </div>
-        <div>
-            <h3>Keep In Touch</h3>
-            <div>
-                <img src="./assets/fb.png" alt="">
-                <img src="./assets/dribble.png" alt="">
-                <img src="./assets/twitter.png" alt="">
-                <img src="./assets/google+.png" alt="">
+        <div class="container">
+            <div class="ft">
+                <div class="ft1">
+                    <div class="ft-lg"><img src="./assets/logo.png" alt="">
+                        <h3>kids <br>Education</h3></div>
+                    
+                    <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+                </div>
+                <div class="ft2">
+                    <h3>School</h3>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Facilities</a></li>
+                        <li><a href="">Admission</a></li>
+                    </ul>
+                </div>
+                <div class="ft3">
+                    <h3>Keep In Touch</h3>
+                    <div>
+                        <img src="./assets/fb.png" alt="">
+                        <img src="./assets/dribble.png" alt="">
+                        <img src="./assets/twitter.png" alt="">
+                        <img src="./assets/google+.png" alt="">
+                    </div>
+                </div>
             </div>
         </div>
+        
     </footer>
 </body>
 </html>
