Stories section half

--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
                         <div class="cntnt">
                             <div class="date"><span>November 19, 2019</span></div>
                             <h3>A fun toddler coloring training on classroom</h3>
-                            <p>Beautiful branding for changes by Never Now in Australia.changes is a platform for open discussion in an inclusive and collaborative environment, providing the...</p>
+                            <p>Beautiful branding for changes by Never Now in Australia. <br> changes is a platform for open discussion in an inclusive and collaborative environment, providing the...</p>
                         </div>
                     </div>
                     <div class="sm-stories">
                         <div class="stories-sm-one">
                             <div class="sm-st-card">
                                 <img src="./assets/story-2.png" alt="">
-                                <div class="cntnt">
+                                <div class="cntnts">
                                     <div class="date"><span>November 19, 2019</span></div>
                                     <h3>A fun toddler coloring training on classroom</h3>
                                 </div>
@@ -101,7 +101,7 @@
                 
                             <div class="sm-st-card">
                                 <img src="./assets/story-4.png" alt="">
-                                <div class="cntnt">
+                                <div class="cntnts">
                                     <div class="date"><span>November 19, 2019</span></div>
                                     <h3>A fun toddler coloring training on classroom</h3>
                                 </div>    
@@ -110,7 +110,7 @@
                         <div class="stories-sm-two">
                             <div class="sm-st-card">
                                 <img src="./assets/story-3.png" alt="">
-                                <div class="cntnt">
+                                <div class="cntnts">
                                     <div class="date"><span>November 19, 2019</span></div>
                                     <h3>A fun toddler coloring training on classroom</h3>
                                 </div>
@@ -118,7 +118,7 @@
                         
                             <div class="sm-st-card">
                                 <img src="./assets/story-5.png" alt="">
-                                <div class="cntnt">
+                                <div class="cntnts">
                                     <div class="date"><span>November 19, 2019</span></div>
                                     <h3>A fun toddler coloring training on classroom</h3>
                                 </div>
