complete story Section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="big-st-card">
                         <img src="./assets/story-1.png" alt="">
                         <div class="cntnt">
-                            <div class="date"><span>November 19, 2019</span></div>
+                            <div class="date"><span class="date-clr1 raleway-front">November 19, 2019</span></div>
                             <h3>A fun toddler coloring training on classroom</h3>
                             <p>Beautiful branding for changes by Never Now in Australia. <br> changes is a platform for open discussion in an inclusive and collaborative environment, providing the...</p>
                         </div>
@@ -94,16 +94,18 @@
                             <div class="sm-st-card">
                                 <img src="./assets/story-2.png" alt="">
                                 <div class="cntnts">
-                                    <div class="date"><span>November 19, 2019</span></div>
-                                    <h3>A fun toddler coloring training on classroom</h3>
+                                    <div class="date"><span class="date-clr2 raleway-front">November 19, 2019</span></div>
+                                    <h3>Find out if a school fits the
+                                        family’s needs</h3>
                                 </div>
                             </div>
                 
                             <div class="sm-st-card">
                                 <img src="./assets/story-4.png" alt="">
                                 <div class="cntnts">
-                                    <div class="date"><span>November 19, 2019</span></div>
-                                    <h3>A fun toddler coloring training on classroom</h3>
+                                    <div class="date"><span class="date-clr2 raleway-front">September 10, 2019</span></div>
+                                    <h3>Classroom management <br>
+                                        techniques for new tutors</h3>
                                 </div>    
                             </div>
                         </div>
@@ -111,16 +113,18 @@
                             <div class="sm-st-card">
                                 <img src="./assets/story-3.png" alt="">
                                 <div class="cntnts">
-                                    <div class="date"><span>November 19, 2019</span></div>
-                                    <h3>A fun toddler coloring training on classroom</h3>
+                                    <div class="date"><span class="date-clr3 raleway-front">November 19, 2019</span></div>
+                                    <h3>Summer math & literacy <br>
+                                        centres for kids</h3>
                                 </div>
                             </div>
                         
                             <div class="sm-st-card">
                                 <img src="./assets/story-5.png" alt="">
                                 <div class="cntnts">
-                                    <div class="date"><span>November 19, 2019</span></div>
-                                    <h3>A fun toddler coloring training on classroom</h3>
+                                    <div class="date"><span class="date-clr2 raleway-front">July 19, 2019</span></div>
+                                    <h3>Conversation rhymes <br>
+                                        improve kids listening</h3>
                                 </div>
                             </div>    
                         </div>
