Complete desktop with marquee

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 
             </div>
             <div>
-                <marquee>hi test</marquee>
+                <marquee>📚 Welcome to School 📚 | Where Learning Meets Excellence! 📚  | 🌟 Admissions Open for 2025  🌟 |  🏆 Celebrating Your Excellence! 🏆</marquee>
             </div>
         </section>
         <section class="two">
