responsive footer complete

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 
     <title>kids School</title>
+    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+    
 </head>
 <body class="quicksand-font">
     <header class="container">
@@ -148,7 +150,7 @@
                     <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
                 </div>
                 <div class="ft2">
-                    <h3>School</h3>
+                    <h3>About School</h3>
                     <ul>
                         <li><a href="">Home</a></li>
                         <li><a href="">About</a></li>
