--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
             <div class="navbtn">
                 <button type="button" class="quicksand-font">Contact</button>
             </div>
+            <div class="mbl"><span class="icn-btn"><i class="fi fi-bs-angle-left"></i></i></span></div>
+            
         </nav>
+        
         <div class="banner">
             <div class="banner-text">
                 <h1><span class="clr-1">Empowering<br></span> students from small age <span class="clr-2">towards vision</span></h1>
